# ai_web_scraping

./: .gitignore  README.md  requirements.txt
app/: main.py  ui.py
app/agents/: orchestrator.py
app/core/: scraper_tool.py  search_tool.py
app/utils/: exporter.py
output/: berlin_agencies_report.csv  leads_hamburg,_norderstedt.csv
rust_lib/: Cargo.toml  pyproject.toml
rust_lib/src/: lib.rs
