[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the compiled library must exactly match the module name in Python
name = "rust_lib"
# "cdylib" instructs Rust to compile a dynamic library (.so / .pyd) for Python
crate-type = ["cdylib"]

[dependencies]
# PyO3 allows us to write native Python modules in Rust
pyo3 = { version = "0.21.0", features = ["extension-module"] }